--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+	<h1>Window Size:</h1>
+    <div id="sizeInfo"></div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
